--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 
 <phpunit bootstrap="./vendor/autoload.php" colors="true">
     <testsuites>
-        <testsuite name="SensioGeneratorBundle">
+        <testsuite name="ZikulaGeneratorBundle">
             <directory suffix="Test.php">./Tests</directory>
         </testsuite>
     </testsuites>
