--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
     "license": "MIT",
     "authors": [
         {
+            "name": "Zikula Community",
+            "homepage": "zikula.org"
+        },
+        {
             "name": "Fabien Potencier",
             "email": "fabien@symfony.com"
         }
@@ -20,7 +24,7 @@
         "twig/twig": "~1.11"
     },
     "autoload": {
-        "psr-0": { "Zikula\\Bundle\\GeneratorBundle": "" }
+        "psr-0": { "Zikula\\Bundle\\GeneratorBundle\\": "" }
     },
     "target-dir": "Zikula/Bundle/GeneratorBundle",
     "minimum-stability": "dev",
