--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Zikula Community",
-            "homepage": "zikula.org"
+            "homepage": "http://zikula.org/"
         },
         {
             "name": "Fabien Potencier",
