--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "symfony/framework-bundle": "~2.2",
+        "symfony/finder": "~2.2",
         "symfony/console": "~2.0"
     },
     "require-dev": {
