--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/console": "~2.0"
     },
     "require-dev": {
-        "symfony/doctrine-bridge": "~2.2",
+        "symfony/doctrine-bridge": "3.2.*",
         "doctrine/orm": "~2.2,>=2.2.3",
         "twig/twig": "~1.11"
     },
