--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": ">=7.2.0",
         "symfony/framework-bundle": "4.*",
         "symfony/finder": "4.*",
         "symfony/console": "4.*"
